--- a/views/about.hbs
+++ b/views/about.hbs
@@ -1,54 +1,52 @@
-<!DOCTYPE html>
-<html lang="en">
+<html lang='en'>
 	<head>
-		<meta charset="utf-8" />
+		<meta charset='utf-8' />
 		<meta
-			name="viewport"
-			content="width=device-width, initial-scale=1, shrink-to-fit=no"
+			name='viewport'
+			content='width=device-width, initial-scale=1, shrink-to-fit=no'
 		/>
-		<meta name="description" content="" />
-		<meta name="author" content="" />
+		<meta name='description' content='' />
+		<meta name='author' content='' />
 
 		<title>Weather | About</title>
 
 		<!-- Bootstrap core CSS -->
 		<link
-			href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css"
-			rel="stylesheet"
+			href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css'
+			rel='stylesheet'
 		/>
 	</head>
 	<body>
-		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+		<nav class='navbar navbar-expand-lg navbar-dark bg-dark'>
 			<button
-				class="navbar-toggler"
-				type="button"
-				data-toggle="collapse"
-				data-target="#navbarNav"
-				aria-controls="navbarNav"
-				aria-expanded="false"
-				aria-label="Toggle navigation"
+				class='navbar-toggler'
+				type='button'
+				data-toggle='collapse'
+				data-target='#navbarNav'
+				aria-controls='navbarNav'
+				aria-expanded='false'
+				aria-label='Toggle navigation'
 			>
-				<span class="navbar-toggler-icon"></span>
+				<span class='navbar-toggler-icon'></span>
 			</button>
-			<div class="collapse navbar-collapse" id="navbarNav">
-				<ul class="navbar-nav">
-					<li class="nav-item active">
-						<a class="nav-link" href=""
-							>Home <span class="sr-only">(current)</span></a
-						>
+			<div class='collapse navbar-collapse' id='navbarNav'>
+				<ul class='navbar-nav'>
+					<li class='nav-item active'>
+						<a class='nav-link' href='/'>Home
+							<span class='sr-only'>(current)</span></a>
 					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="">About</a>
+					<li class='nav-item'>
+						<a class='nav-link' href='/about'>About</a>
 					</li>
 				</ul>
 			</div>
 		</nav>
 		<!-- Page Content -->
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-12 text-center main mt-5">
-					<h1 class="mt-5">Weather Finder</h1>
-					<p class="mt-3">Created by Hamza Mirza</p>
+		<div class='container'>
+			<div class='row'>
+				<div class='col-lg-12 text-center main mt-5'>
+					<h1 class='mt-5'>Weather Finder</h1>
+					<p class='mt-3'>Created by Hamza Mirza</p>
 				</div>
 			</div>
 		</div>
